Se agrego h1 con nombre en index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>1er programa en GIT</title>
 </head>
 <body>
-    
+    <h1>Josue Hernández González</h1>
+    <h2>Carnet: 2021111</h2>
 </body>
 </html>
