Se modifico el h2 con el numero de carnet

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Josue Hernández González</h1>
-    <h2>Carnet:  2021111</h2>
+    <h2>Carnet de estudiante:  2021111</h2>
 </body>
 </html>
