se edito index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Josue Hernández González</h1>
     <h2>Carnet de estudiante:  2021111</h2>
     <p>hola</p>
+    <h1>hlasdfasdfasdf</h1>
 </body>
 </html>
